--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - RABBITMQ_URL=amqps://msactcbs:T_PHvEtd5u941rLQJIHnokEHJL_dBVh6@puffin.rmq2.cloudamqp.com/msactcbs
+      - RABBITMQ_URL=your amp url
       - SALES_REPORT_QUEUE=sales_summary_queue
-      - MONGODB_URI=mongodb+srv://sachin:T1mXxni3yXjE76UC@cluster0.mwsbpek.mongodb.net/invoice-db?retryWrites=true&w=majority
+      - MONGODB_URI= your mongodb uri
 
   consumer-service:
     build:
